--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <title>NewArgentBank</title>
+    <title>newArgentbank</title>
   </head>
   <body>
     <div id="root"></div>
